--- a/06-mutations.Rmd
+++ b/06-mutations.Rmd
@@ -264,3 +264,92 @@ oncomap <- TN_muts %>%
 oncomap
 ```
 
+## WGD estimation in mutational timing
+```{r wgd_mut_timing}
+# TN5 can't be confidently estimated and for this reason is excluded
+wgd_time <- read.table(here("extdata/exome/timing/wgd_timing_distributions.tsv"), 
+                       header = T) %>% 
+  mutate(Sample_ID = case_when(
+    str_detect(Sample_ID, "TN28") ~ "TN1",
+    str_detect(Sample_ID, "TN20") ~ "TN2",
+    str_detect(Sample_ID, "TN17") ~ "TN3",
+    str_detect(Sample_ID, "TN26") ~ "TN4",
+    str_detect(Sample_ID, "TN21") ~ "TN5",
+    str_detect(Sample_ID, "TN27") ~ "TN8",
+    str_detect(Sample_ID, "pD") ~ "TN6",
+    str_detect(Sample_ID, "pC") ~ "TN7"
+  )) %>% 
+  filter(Sample_ID != "TN5")
+
+wgd_time_tidy <- wgd_time %>% 
+  gather(key = "bin",
+         value = "prob",
+         -Distribution_Name,
+         -Sample_ID) %>% 
+  mutate(bin = str_extract(bin, "[0-9].[0-9]+"),
+         bin = as.numeric(bin),
+         )
+
+wgd_plot <- ggplot(wgd_time_tidy) +
+  geom_col(aes(x = bin,
+               y = prob,
+               fill = Sample_ID,
+               color = Sample_ID)) +
+  scale_fill_manual(values = PNWColors::pnw_palette("Sailboat", 8)) +
+  scale_color_manual(values = PNWColors::pnw_palette("Sailboat", 8)) +
+  facet_wrap(vars(Sample_ID), nrow = 2) +
+  theme_cowplot() +
+  theme(strip.background = element_blank(),
+        legend.position = "none") +
+  labs(x = "relative mutational time",
+       y = "WGD probability",
+       fill = "",
+       color = "") 
+
+wgd_plot
+```
+
+## WGD estimations in copy number time
+```{r cn_timing}
+# TN5 can't be confidently estimated and for this reason is excluded
+cn_time_wgd <- read.delim(here("extdata/exome/timing/cn_timing_confidence_intervals.tsv")) %>%
+  mutate(Sample_ID = case_when(
+    str_detect(Sample_ID, "TN28") ~ "TN1",
+    str_detect(Sample_ID, "TN20") ~ "TN2",
+    str_detect(Sample_ID, "TN17") ~ "TN3",
+    str_detect(Sample_ID, "TN26") ~ "TN4",
+    str_detect(Sample_ID, "TN27") ~ "TN8",
+    str_detect(Sample_ID, "pD") ~ "TN6",
+    str_detect(Sample_ID, "pC") ~ "TN7"
+  )) %>% 
+  filter(Sample_ID != "TN5") 
+
+cn_wgd_plot <- cn_time_wgd %>% 
+  ggplot(aes(y = Early_Fraction,
+             x = "samp")) +
+  geom_rect(aes(ymin = 0, ymax = Early_Fraction, xmin = -Inf, xmax = Inf), color = 'gray70', alpha = .4) +
+  geom_point(size = 5) +
+  geom_errorbar(aes(ymin = Early_Fraction_Low_CI,
+                    ymax = Early_Fraction_High_CI), 
+                width = .3) +
+  geom_text(aes(label = "WGD"), nudge_x = .3) +
+  scale_y_continuous(limits = c(0,1),
+                     breaks = scales::pretty_breaks(n = 10),
+                     expand = c(0,0)) +
+  facet_wrap(vars(Sample_ID), scales = "free_x", nrow = 2) +
+  theme(axis.line.y = element_blank(),
+        axis.text.y = element_blank(),
+        axis.ticks.y = element_blank(),
+        axis.title.y = element_blank(),
+        axis.text.x = element_text(size = 14,
+                                   angle = 90,
+                                   vjust = .5,
+                                   hjust = 1)) +
+  labs(y = "WGD relative copy number time") + 
+  coord_flip() 
+
+cn_wgd_plot
+```
+
+
+
