--- a/07-cell_lines.Rmd
+++ b/07-cell_lines.Rmd
@@ -31,6 +31,7 @@ mb231_ploidy <- 2.41
 mb231_popseg_long_ml <- readRDS(here("extdata/merge_levels/mdamb231_popp31_popseg_long_ml.rds"))
 
 mb231_umap <- run_umap(mb231_popseg_long_ml,
+                       umap_n_neighbors = 25,
                        seed = 206)
 
 mb231_clustering <- run_clustering(mb231_umap,
@@ -99,7 +100,8 @@ mb231ex1_ploidy <- 2.41
 mb231ex1_popseg_long_ml <- readRDS(here("extdata/merge_levels/mdamb231ex1_popseg_long_ml.rds"))
 
 mb231ex1_umap <- run_umap(mb231ex1_popseg_long_ml,
-                       seed = 206)
+                          umap_n_neighbors = 25,
+                          seed = 206)
 
 mb231ex1_clustering <- run_clustering(mb231ex1_umap,
                                  k_snn_major = 55,
@@ -167,7 +169,8 @@ mb231ex2_ploidy <- 2.41
 mb231ex2_popseg_long_ml <- readRDS(here("extdata/merge_levels/mdamb231ex2_popseg_long_ml.rds"))
 
 mb231ex2_umap <- run_umap(mb231ex2_popseg_long_ml,
-                       seed = 206)
+                          umap_n_neighbors = 25,
+                          seed = 206)
 
 mb231ex2_clustering <- run_clustering(mb231ex2_umap,
                                  k_snn_major = 17,
@@ -229,6 +232,7 @@ mb453_ploidy <- 4.17
 mb453_popseg_long_ml <- readRDS(here("extdata/merge_levels/mb453_popseg_long_ml.rds"))
 
 mb453_umap <- run_umap(mb453_popseg_long_ml,
+                       umap_n_neighbors = 25,
                        seed = 206)
 
 mb453_clustering <- run_clustering(mb453_umap,
@@ -297,6 +301,7 @@ mb157_ploidy <- 2.55
 mb157_popseg_long_ml <- readRDS(here("extdata/merge_levels/mb157_popseg_long_ml.rds"))
 
 mb157_umap <- run_umap(mb157_popseg_long_ml,
+                       umap_n_neighbors = 25,
                        seed = 206)
 
 mb157_clustering <- run_clustering(mb157_umap,
@@ -367,7 +372,8 @@ bt20_ploidy <- 2.7
 bt20_popseg_long_ml <- readRDS(here("extdata/merge_levels/bt20_popseg_long_ml.rds"))
 
 bt20_umap <- run_umap(bt20_popseg_long_ml,
-                       seed = 206)
+                      umap_n_neighbors = 25,
+                      seed = 206)
 
 bt20_clustering <- run_clustering(bt20_umap,
                                  k_snn_major = 55,
